syntax = "proto3";

option csharp_namespace = "Stocks.Protocols";

import "shared.proto";
import "pagination.proto";

service RawDataService {
    rpc GetCompaniesData(GetCompaniesDataRequest) returns (GetCompaniesDataReply);
}

message GetCompaniesDataRequest {
    string request_id = 1;
    string dataSource = 2;
    PaginationRequest pagination = 3;
}

message GetCompaniesDataReply {
    StandardResponse response = 1; 
    repeated GetCompaniesDataReplyItem companies_list = 2;
	PaginationResponse pagination = 3;
}

message GetCompaniesDataReplyItem {
    int64 company_id = 1;
    int64 cik = 2;
    string data_source = 3;
    repeated GetCompaniesDataReplyItemInstrument instruments = 4;
}

message GetCompaniesDataReplyItemInstrument {
    string symbol = 1;
    string name = 2;
    string exchange = 3;
}
